fix: Registration title padding misalignment

--- a/client/components/register/register.styl
+++ b/client/components/register/register.styl
@@ -2,7 +2,7 @@
   background-color $gray-bg
   border-top 6px solid $primary
   min-height 100vh
-  padding 20px
+  padding-bottom 20px
   +$below('sm')
     padding 20px 0
 
